samples/outOfBounds/out.txt
samples\outOfBounds\bad.c:5:12: error: Buffer is accessed out of bounds: str [bufferAccessOutOfBounds]
    strcpy(str, "0123456789abcdef");
           ^
